--- a/Views/EquipmentInventoryView.axaml
+++ b/Views/EquipmentInventoryView.axaml
@@ -57,7 +57,7 @@
                     <shadui:BreakpointViewPort>
                         <shadui:BreakpointView Breakpoint="XlAndUp">
                             <StackPanel>
-                                <Grid ColumnDefinitions="Auto Auto Auto *">
+                                <Grid ColumnDefinitions="Auto Auto Auto Auto Auto *">
                                     <TextBox
                                         Grid.Column="0"
                                         HorizontalAlignment="Left"
@@ -84,8 +84,28 @@
                                         ItemsSource="{CompiledBinding EquipmentFilterItems}"
                                         SelectedItem="{CompiledBinding SelectedEquipmentFilterItem}">
                                     </ComboBox>
-                                    <Button
+                                    <ComboBox
                                         Grid.Column="2"
+                                        Width="120"
+                                        Margin="20,0,0,0"
+                                        PlaceholderText="Condition"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        ItemsSource="{CompiledBinding ConditionFilterItems}"
+                                        SelectedItem="{CompiledBinding SelectedConditionFilterItem}">
+                                    </ComboBox>
+                                    <ComboBox
+                                        Grid.Column="3"
+                                        Width="120"
+                                        Margin="20,0,0,0"
+                                        PlaceholderText="Status"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        ItemsSource="{CompiledBinding FilteredStatusFilterItems}"
+                                        SelectedItem="{CompiledBinding SelectedStatusFilterItem}">
+                                    </ComboBox>
+                                    <Button
+                                        Grid.Column="4"
                                         Classes="Outline"
                                         Margin="20,0,0,0"
                                         HorizontalAlignment="Left"
@@ -102,7 +122,7 @@
                                         </StackPanel>
                                     </Button>
                                     <Button
-                                        Grid.Column="3"
+                                        Grid.Column="5"
                                         Classes="Primary"
                                         Margin="20,0,0,0"
                                         HorizontalAlignment="Right"
@@ -346,7 +366,7 @@
                         </shadui:BreakpointView>
                         <shadui:BreakpointView Breakpoint="XlAndDown">
                             <StackPanel>
-                                <Grid ColumnDefinitions="Auto Auto Auto *">
+                                <Grid ColumnDefinitions="Auto Auto Auto Auto Auto *">
                                     <TextBox
                                         Grid.Column="0"
                                         HorizontalAlignment="Left"
@@ -355,7 +375,7 @@
                                         Text="{CompiledBinding SearchStringResult, Mode=TwoWay}"
                                         shadui:ControlAssist.Height="40"
                                         Classes="Clearable"
-                                        Width="200">
+                                        Width="170">
                                         <TextBox.InnerRightContent>
                                             <Svg
                                                 Width="20"
@@ -365,7 +385,7 @@
                                     </TextBox>
                                     <ComboBox
                                         Grid.Column="1"
-                                        Width="100"
+                                        Width="70"
                                         Margin="20,0,0,0"
                                         PlaceholderText="Filter"
                                         HorizontalAlignment="Left"
@@ -373,8 +393,28 @@
                                         ItemsSource="{CompiledBinding EquipmentFilterItems}"
                                         SelectedItem="{CompiledBinding SelectedEquipmentFilterItem}">
                                     </ComboBox>
-                                    <Button
+                                    <ComboBox
                                         Grid.Column="2"
+                                        Width="70"
+                                        Margin="20,0,0,0"
+                                        PlaceholderText="Condition"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        ItemsSource="{CompiledBinding ConditionFilterItems}"
+                                        SelectedItem="{CompiledBinding SelectedConditionFilterItem}">
+                                    </ComboBox>
+                                    <ComboBox
+                                        Grid.Column="3"
+                                        Width="70"
+                                        Margin="20,0,0,0"
+                                        PlaceholderText="Status"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        ItemsSource="{CompiledBinding FilteredStatusFilterItems}"
+                                        SelectedItem="{CompiledBinding SelectedStatusFilterItem}">
+                                    </ComboBox>
+                                    <Button
+                                        Grid.Column="4"
                                         Classes="Outline"
                                         Margin="20,0,0,0"
                                         HorizontalAlignment="Left"
@@ -382,16 +422,16 @@
                                         Command="{CompiledBinding ExportEquipmentListCommand}">
                                         <StackPanel Orientation="Horizontal">
                                             <Svg
-                                                Width="15"
-                                                Height="15"
+                                                Width="12"
+                                                Height="12"
                                                 VerticalAlignment="Center"
                                                 Margin="0,0,8,0"
                                                 Path="avares://AHON_TRACK/Assets/EquipmentInventoryView/export-icon.svg" />
-                                            <TextBlock Text="Export to PDF" FontSize="12" VerticalAlignment="Center" />
+                                            <TextBlock Text="Export to PDF" FontSize="10" VerticalAlignment="Center" />
                                         </StackPanel>
                                     </Button>
                                     <Button
-                                        Grid.Column="3"
+                                        Grid.Column="5"
                                         Classes="Primary"
                                         Margin="20,0,0,0"
                                         HorizontalAlignment="Right"
@@ -399,14 +439,14 @@
                                         Command="{CompiledBinding ShowAddEquipmentDialogCommand}">
                                         <StackPanel Orientation="Horizontal">
                                             <Svg
-                                                Width="15"
-                                                Height="15"
+                                                Width="12"
+                                                Height="12"
                                                 VerticalAlignment="Center"
                                                 Margin="0,0,8,0"
                                                 Path="avares://AHON_TRACK/Assets/EquipmentInventoryView/add-equipment-icon.svg" />
                                             <TextBlock 
                                                 Text="Add Equipment" 
-                                                FontSize="12"
+                                                FontSize="10"
                                                 Foreground="White"
                                                 VerticalAlignment="Center" />
                                         </StackPanel>
