fix(components): missing a binding in batch number

--- a/Components/AddEditProduct/AddEditProductView.axaml
+++ b/Components/AddEditProduct/AddEditProductView.axaml
@@ -71,7 +71,7 @@
                                         Classes="Clearable"
                                         Watermark="Enter product batch number"
                                         shadui:ControlAssist.Label="Batch Number"
-                                        Text="{CompiledBinding BatchNumber, Mode=TwoWay}"/>
+                                        Text="{CompiledBinding BatchCode, Mode=TwoWay}"/>
 									<ComboBox
                                         Margin="0,-4,0,0"
                                         Grid.Column="1"
